Update matrix equation approximate solution process

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "c5625154-88e2-4197-ceef-d767ca138cec"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -373,7 +373,7 @@
         },
         "outputId": "0bddf682-5413-4e9c-a54d-12400b809051"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,20 +399,23 @@
       "source": [
         "###  Solve \" X β + ϵ= y\"\n",
         "\n",
-        "Putting all observation in a matrix, yields one line equation that is equivalent to solve the system of linear equations  that is :\n",
+        "Putting all observation in a matrix, yields one line equation that is equivalent to solving the system of linear equations  that is :\n",
         "$$ \\textbf{X} \\beta + \\epsilon = y$$\n",
         "\n",
         "Solving such equation would have been a standard procedure, if there were no error term $\\epsilon$ or uncertanty in other words.\n",
         "\n",
-        "Intuitively, we would like a solution that yields the minimum value of $\\epsilon$. But as $\\epsilon$ is an n-dimensional vector, what how do we compare them? One approach is to minimize $||\\epsilon||$ (L2 norm of vector), which is to minimize $||Ax -bX ||$. Minimization can be achieved in various ways, such as using derivatives. HERE!!!\n",
+        "Any solution of the matrix equation finds values for the $\\beta$ and values for $\\epsilon$.  Intuitively, we would like a solution that yields the minimum value of $\\epsilon$. But as $\\epsilon$ is an n-dimensional vector,  how do we compare them?\n",
         "\n",
-        "My favorite is one that uses some linear algebraic magic.\n",
+        "One approach is to minimize $||\\epsilon||$ (the L2 norm of the vector), which equates to minimizing $||Ax - bX||$. Various techniques, like using derivatives, can achieve this minimization.\n",
+        "\n",
+        "My favorite approach is one that uses some linear algebraic magic (i.e., projection which is essentially a change of basis).\n",
         "I break it to three observations:\n",
-        "1. The equation have a solution if and only if $y$ is in the column space of $X$.\n",
+        "1. The equation have an exact solution (i.e., $||\\epsilon||$ = 0) if and only if $y$ is in the column space of $X$.\n",
         "1. If y is not in column space of X, we can find closest $\\hat{y}$ that is in the span of columns of $X$ and solve the equation for that. Intuitively it makes sense that would minimize $||Ax -b ||$.\n",
-        "2. To find such $\\hat{y}$ we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to the basis of column space of $X$ anyway.\n",
+        "2. To find such $\\hat{y}$ we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to column space of $X$.\n",
         "\n",
         "3. Finding such matrix really depends on X features For example if X is a square matrix with all orthogonal columns, no such projection is needed cause X spans the whole dimension. If X has orthogonal columns but not square, that projection is $XX^T$. In general case it is $X(X^TX)^{-1}X^T$. Lets call this $X^+$ from now on.  The proof has to do with svd and stuff.\n",
+        "\n",
         "\n",
         "Lets calculate $X^+$ for our sample. HERE!!!\n",
         "\n",
@@ -516,7 +519,7 @@
       "source": [
         "### what motivates $||Ax -b ||$ as a loss function\n",
         "\n",
-        "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, I can add some more to it. HERE!!!\n",
+        "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, or as a function to minimize, I can add some more to it. HERE!!!\n",
         "In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
         "\n",
         "In fact under some assumption it is the BEST estimator. But what are those assumption and why is it so greate a estimator.\n",
