Add a section to outline (se)

--- a/notebookes/SamplingStatsAndDistros.ipynb
+++ b/notebookes/SamplingStatsAndDistros.ipynb
@@ -36,6 +36,7 @@
         "    - Variance of summary statistic\n",
         "    - Variance within a sample vs variance of a given stat over samplings\n",
         "    - Standrad Error of stats and confidence interval. (SE(beta0))\n",
+        "  - standard error of coefficient ( what is the granularity, what input needed\n",
         "  F-test (within groups variance vs between group variance)\n",
         "- Conclusion:"
       ],
@@ -95,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +130,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +194,7 @@
       "metadata": {
         "id": "m4AZzCu1f6B1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +206,7 @@
       "metadata": {
         "id": "zCDURIavHXqp"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +228,7 @@
       "metadata": {
         "id": "eMzW6EcQIVNh"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +251,7 @@
           "height": 452
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
