Update text for observations that helps solve beta X + eps = y

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -410,15 +410,20 @@
         "\n",
         "My favorite approach is one that uses some linear algebraic magic (i.e., projection which is essentially a change of basis).\n",
         "I break it to three observations:\n",
-        "1. The equation have an exact solution (i.e., $||\\epsilon||$ = 0) if and only if $y$ is in the column space of $X$.\n",
-        "1. If y is not in column space of X, we can find closest $\\hat{y}$ that is in the span of columns of $X$ and solve the equation for that. Intuitively it makes sense that would minimize $||Ax -b ||$.\n",
-        "2. To find such $\\hat{y}$ we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to column space of $X$.\n",
+        "1. The equation have an exact solution (i.e., $||\\epsilon||$ = 0) if and only if $y$ is in the column space of $X$. If you haven't heard about column space of a matrix, it is just a linear sub-space. You can think of it as a hyper plane.\n",
+        "\n",
+        "1. If y is not in column space of X, we can find closest $\\hat{y}$ that is in the span of columns of $X$ and solve the equation for that. (HERE!!! maybe have a separate notebook and explain it with relation to ranks, if you really wanna dive deep see that notebook, and then summerize this text and move it to the other notbook or Appendix))\n",
+        "\n",
+        "2. If we solve $\\textbf{X} \\beta  = \\hat{y}$ and find a solution for $\\beta$ , and plug those values in $\\textbf{X} \\beta + \\epsilon = y$, resulting $\\epsilon = ||Ax -b ||$ is minimized. The intuitvive reason is that $\\hat{y}$ is closest point to $y$ that exist on the span.\n",
+        "\n",
+        "3. With all that being said, we need two steps: step one is to find $\\hat{y}$, and step two is solve $\\textbf{X} \\beta  = \\hat{y}$.\n",
+        "\n",
+        "2. To find such $\\hat{y}$, (closest point to $y$ on the column space of X) we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to column space of $X$.\n",
         "\n",
         "3. Finding such matrix really depends on X features For example if X is a square matrix with all orthogonal columns, no such projection is needed cause X spans the whole dimension. If X has orthogonal columns but not square, that projection is $XX^T$. In general case it is $X(X^TX)^{-1}X^T$. Lets call this $X^+$ from now on.  The proof has to do with svd and stuff.\n",
         "\n",
         "\n",
         "Lets calculate $X^+$ for our sample. HERE!!!\n",
-        "\n",
         "\n"
       ],
       "metadata": {
@@ -508,7 +513,8 @@
         "\n",
         "HERE!!!\n",
         "we arrive at:\n",
-        "$${\\displaystyle {\\widehat {\\beta }}=(X^{\\operatorname {T} }X)^{-1}X^{\\operatorname {T} }y}$$"
+        "$${\\displaystyle {\\widehat {\\beta }}=(X^{\\operatorname {T} }X)^{-1}X^{\\operatorname {T} }y}$$\n",
+        "HERE!!! Why the books calculate $\\hat{\\beta}$ instead of $\\{beta}$\n"
       ],
       "metadata": {
         "id": "dwygEhfQ_ky0"
