Appendix: some linear algebra

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -19,15 +19,29 @@
         "- Body\n",
         "  - Linear regression is solving linear equations approximately.\n",
         "     - Matrix notation of linear regression equations.\n",
-        "     - Switch to a different vector space\n",
+        "     - build X matrix with loaded data\n",
         "     - Solve \" X β = y\"\n",
         "  - How to solve uncertain set of linear equations?\n",
         "  - The line fitting.\n",
         "  - Connection between method of least squares and the distribution of error terms.\n",
-        "- Conclusion:"
+        "- Conclusion:\n",
+        "- Appendix: Some linear algebra\n",
+        "  - questions\n",
+        "  - switch to another view: column space\n",
+        "  - revisit two questions\n",
+        "  - Go back a bit, what if no solution, what about projection ...\n",
+        "  - rank of X, stuff about the projecting\n",
+        "  - what if it has solution\n"
       ],
       "metadata": {
         "id": "dnGbKJ-RUUuM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "S7ukZ1whHh99"
       }
     },
     {
@@ -290,51 +304,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Swtich  to a different vector space :)\n",
+        "### build X matrix\n",
         "\n",
-        "With these being said,  finding coefficient in a linear regression is to find the unknown (p + 1) dimensional vector $\\beta$ in the equation $\\tilde{X} \\beta =  y$ , where $\\beta$ and $y$ are both vecotrs.\n",
+        "HERE!!! construct X from the data. Play with it\n",
         "\n",
-        "Now we are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p + 1 scalars that identify such plain and are coefficients $\\beta$.\n",
-        "\n",
-        "The good thing about matrix notation is that you can instantly switch to a second view of data. So, instead of looking at n of $p + 1$ dimensional data point, you can look at each column as a data point. Then you end up with (p + 1) of  n-dimensional data points. Equations would change to follow\n",
-        "\n",
-        "$$\n",
-        "y =\n",
-        "\\begin{bmatrix}\n",
-        "1 & x_{11} & x_{12} & \\ldots & x_{1p} \\\\\n",
-        "1 & x_{21} & x_{22} & \\ldots & x_{2p} \\\\\n",
-        "\\vdots &\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-        "1 & x_{n1} & x_{n2} & \\ldots & x_{np}\n",
-        "\\end{bmatrix}\n",
-        "\\begin{bmatrix}\n",
-        "\\beta_0 \\\\\n",
-        "\\vdots \\\\\n",
-        "\\beta_p \\\\\n",
-        "\\end{bmatrix}\n",
-        "+ ϵ\n",
-        "= \\\\\n",
-        "\\beta_0 *\n",
-        "\\begin{bmatrix}\n",
-        "1\\\\\n",
-        "1 \\\\\n",
-        "\\vdots\\\\\n",
-        "1\n",
-        "\\end{bmatrix}\n",
-        "+ \\cdots + \\beta_j *\n",
-        "\\begin{bmatrix}\n",
-        "x_{1j} \\\\\n",
-        "x{2j} \\\\\n",
-        "\\vdots \\\\\n",
-        "x_{nj}\n",
-        "\\end{bmatrix} + \\cdots + \\beta_p *\n",
-        "\\begin{bmatrix}\n",
-        "x_{1p} \\\\\n",
-        "x_{2p} \\\\\n",
-        "\\vdots \\\\\n",
-        "x_{np}\n",
-        "\\end{bmatrix} + \\epsilon =\\\\\n",
-        "\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i\n",
-        "$$"
+        "\n"
       ],
       "metadata": {
         "id": "rchfxvM41TIM"
@@ -343,15 +317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The algebraic interpretation is to find a linear combination of these p + 1 n-vectores that equals to $y$.\n",
-        "\n",
-        "\n",
-        "We have a more clear picture of when the system has a solution. For examples, in order for system to have a solution, y needs to be in the linear span of $\\mathbf{x_i}$'s. Also, the solution is unique if and only if $\\mathbf{x_i}$'s are linearly independent.\n",
-        "\n",
-        "\n",
-        "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. I would suggest try to answer a few questions for yourself, such as\n",
-        "1. what is the shape of X?\n",
-        "2. what is the rank of X?\n"
+        "Lets build the X matrix\n"
       ],
       "metadata": {
         "id": "ICHlTFCJ1Nkr"
@@ -414,9 +380,12 @@
         "\n",
         "1. If y is not in column space of X, we can find closest $\\hat{y}$ that is in the span of columns of $X$ and solve the equation for that. (HERE!!! maybe have a separate notebook and explain it with relation to ranks, if you really wanna dive deep see that notebook, and then summerize this text and move it to the other notbook or Appendix))\n",
         "\n",
+        "\n",
+        "HERE!!! continue with second question and then move all X(XTX)-1 craziness to here, **name** my important eqs for easier reference\n",
+        "\n",
         "2. If we solve $\\textbf{X} \\beta  = \\hat{y}$ and find a solution for $\\beta$ , and plug those values in $\\textbf{X} \\beta + \\epsilon = y$, resulting $\\epsilon = ||Ax -b ||$ is minimized. The intuitvive reason is that $\\hat{y}$ is closest point to $y$ that exist on the span.\n",
         "\n",
-        "3. With all that being said, we need two steps: step one is to find $\\hat{y}$, and step two is solve $\\textbf{X} \\beta  = \\hat{y}$.\n",
+        "3. With all that being said, we need two steps: step one is to find $\\hat{y}$, and step two is solve $\\textbf{X} \\hat{\\beta}  = \\hat{y}$.\n",
         "\n",
         "2. To find such $\\hat{y}$, (closest point to $y$ on the column space of X) we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to column space of $X$.\n",
         "\n",
@@ -746,6 +715,86 @@
       ],
       "metadata": {
         "id": "20tdkyo3Vpf2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Appendix: Some linear algebra\n",
+        "Consider this matrix equation: $\\textbf{X} \\hat{\\beta}  = \\hat{y}$: $\\textbf{X}$ and $y$ are known and goal is to find $\\hat{\\beta}$.\n",
+        "Here are some questions to start with:\n",
+        "1. When does this equation have answer?\n",
+        "2. When is it a unique answer?\n",
+        "3. How to calculate the answer if we know there is an answer.\n",
+        "\n",
+        "\n",
+        "\n",
+        "A standard process is to exapnd the matrix notation as a scaled sum of columns of X.\n",
+        "\n",
+        "$$\n",
+        "y =\n",
+        "\\mathbf{X}.\n",
+        "\\begin{bmatrix}\n",
+        "\\beta_0 \\\\\n",
+        "\\vdots \\\\\n",
+        "\\beta_p \\\\\n",
+        "\\end{bmatrix}\n",
+        "+ ϵ\n",
+        "= \\\\\n",
+        "\\beta_0 *\n",
+        "\\begin{bmatrix}\n",
+        "1\\\\\n",
+        "1 \\\\\n",
+        "\\vdots\\\\\n",
+        "1\n",
+        "\\end{bmatrix}\n",
+        "+ \\cdots + \\beta_j *\n",
+        "\\begin{bmatrix}\n",
+        "x_{1j} \\\\\n",
+        "x{2j} \\\\\n",
+        "\\vdots \\\\\n",
+        "x_{nj}\n",
+        "\\end{bmatrix} + \\cdots + \\beta_p *\n",
+        "\\begin{bmatrix}\n",
+        "x_{1p} \\\\\n",
+        "x_{2p} \\\\\n",
+        "\\vdots \\\\\n",
+        "x_{np}\n",
+        "\\end{bmatrix} + \\epsilon =\\\\\n",
+        "\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i\n",
+        "$$\n",
+        "\n",
+        "Not that $\\mathbf{x}_i$ denotes the i-th column of X.\n",
+        "We just ended up with a $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i $"
+      ],
+      "metadata": {
+        "id": "KWHMu8ZeHkst"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The algebraic interpretation is to find a linear combination of these p + 1 vecotors. Two algebraic concepts pop up here first, linear **span** of a set of vectors, second column space of a matrix. So column space of a matrix X is linear span of all of it's columns $\\mathbf{x_i}$.\n",
+        "\n",
+        "To find $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\hat{y}$ is to find a linear combination of columns of X that equals to $\\hat{y}$\n",
+        "Lets revisit the questions we asked above.\n",
+        "\n",
+        "**Question 1**: When does this equation have answer?\n",
+        "\n",
+        "**Answer**: The equation has answer if and only if $\\hat{y}$ resists on the vecotr space of linear span of $\\mathbf{x_i}$'s.\n",
+        "\n",
+        "**Question 2**  When is it a unique answer? 🤷\n",
+        "\n",
+        "HERE!!! continue with second question and then move all X(XTX)-1 craziness to here, **NAME** my important eqs for easier reference 🌨\n",
+        "\n",
+        "\n",
+        "\n",
+        "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. I would suggest try to answer a few questions for yourself, such as\n",
+        "1. what is the shape of X?\n",
+        "2. what is the rank of X?"
+      ],
+      "metadata": {
+        "id": "7tbD1EalLaZW"
       }
     }
   ],
