Appendix:Some linear algebra:project to column space to get approximate solution

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -374,12 +374,9 @@
         "\n",
         "One approach is to minimize $||\\epsilon||$ (the L2 norm of the vector), which equates to minimizing $||Ax - bX||$. Various techniques, like using derivatives, can achieve this minimization.\n",
         "\n",
-        "My favorite approach is one that uses some linear algebraic magic (i.e., projection which is essentially a change of basis).\n",
-        "I break it to three observations:\n",
-        "1. The equation have an exact solution (i.e., $||\\epsilon||$ = 0) if and only if $y$ is in the column space of $X$. If you haven't heard about column space of a matrix, it is just a linear sub-space. You can think of it as a hyper plane.\n",
         "\n",
-        "1. If y is not in column space of X, we can find closest $\\hat{y}$ that is in the span of columns of $X$ and solve the equation for that. (HERE!!! maybe have a separate notebook and explain it with relation to ranks, if you really wanna dive deep see that notebook, and then summerize this text and move it to the other notbook or Appendix))\n",
         "\n",
+        "HERE!!! my favorite approach is to project y into column space of X and solve it. link the appendix\n",
         "\n",
         "HERE!!! continue with second question and then move all X(XTX)-1 craziness to here, **name** my important eqs for easier reference\n",
         "\n",
@@ -470,14 +467,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. With all this, instead of finding $\\beta$ which is impossible, we set out to find $\\hat{\\beta}$ in $\\hat{y} = X(X^TX)^{-1}X^T y =  X \\hat{\\beta}$.\n",
         "\n",
-        "5. While $X(X^TX)^{-1}X^T y =  X \\hat{\\beta}$ might have multiple solution, one trivial solution is $\\hat{\\beta} = (X^TX)^{-1}X^T y$ by removing X from the right and left side(easier way to arrive at it?what if y is in column space of X? does it simplify? see with data)\n",
-        "Now lets sample a set and try these matrices. HERE!!!\n",
-        "**sources**\n",
-        "1. https://en.wikipedia.org/wiki/Projection_(linear_algebra)#Formulas\n",
-        "2. https://www-users.cse.umn.edu/~rejto/4242/4242_2final_sol3.pdf\n",
-        "3. https://math.stackexchange.com/questions/1816364/the-svd-solution-to-linear-least-squares-linear-system-of-equations\n",
         "\n",
         "\n",
         "HERE!!!\n",
@@ -493,7 +483,7 @@
       "cell_type": "markdown",
       "source": [
         "### what motivates $||Ax -b ||$ as a loss function\n",
-        "\n",
+        "We formulate uncertainty as a vector $\\epsilon$ that sample from a normal distribution.\n",
         "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, or as a function to minimize, I can add some more to it. HERE!!!\n",
         "In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
         "\n",
@@ -545,22 +535,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### How to solve uncertain set of linear equations?\n",
-        "We saw that finding regression coefficients is like solving $n$ equaltions with $p + 1$ variables but with some uncertainty.\n",
-        "\n",
-        "If there was no uncertainty involved the space of all such solutions is the dual of (p + 1 ) dimensional space . Then the answer solution for coefficients is the kernel of the Linear Transformation $X$ defined above.\n",
-        "\n",
-        "However, with uncertainty in picture, the kernel is not answer anymore. Now the problem definition changes a bit. So We have the trasnfromation X and the function RSS defined on ... (HERE!!!!!!!!!!!!! continue define the problem algebraically)\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "e7HXhSq8yfCc"
-      }
     },
     {
       "cell_type": "code",
@@ -721,25 +695,22 @@
       "cell_type": "markdown",
       "source": [
         "## Appendix: Some linear algebra\n",
-        "Consider this matrix equation: $\\textbf{X} \\hat{\\beta}  = \\hat{y}$: $\\textbf{X}$ and $y$ are known and goal is to find $\\hat{\\beta}$.\n",
-        "Here are some questions to start with:\n",
-        "1. When does this equation have answer?\n",
-        "2. When is it a unique answer?\n",
-        "3. How to calculate the answer if we know there is an answer.\n",
-        "\n",
+        "Consider this matrix equation:\n",
+        "$$\\textbf{X} \\widehat{\\beta}  = \\widehat{y}$$\n",
+        "$\\textbf{X}$ and $\\widehat{y}$ are known and the goal is to find unkonwn $\\widehat{\\beta}$.\n",
+        "Most important question is  when  this equation have answer? To answer this question, let's switch to another view of the equation:\n",
         "\n",
         "\n",
         "A standard process is to exapnd the matrix notation as a scaled sum of columns of X.\n",
         "\n",
         "$$\n",
-        "y =\n",
+        "\\widehat{y} =\n",
         "\\mathbf{X}.\n",
         "\\begin{bmatrix}\n",
         "\\beta_0 \\\\\n",
         "\\vdots \\\\\n",
         "\\beta_p \\\\\n",
         "\\end{bmatrix}\n",
-        "+ ϵ\n",
         "= \\\\\n",
         "\\beta_0 *\n",
         "\\begin{bmatrix}\n",
@@ -751,7 +722,7 @@
         "+ \\cdots + \\beta_j *\n",
         "\\begin{bmatrix}\n",
         "x_{1j} \\\\\n",
-        "x{2j} \\\\\n",
+        "x_{2j} \\\\\n",
         "\\vdots \\\\\n",
         "x_{nj}\n",
         "\\end{bmatrix} + \\cdots + \\beta_p *\n",
@@ -774,27 +745,71 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The algebraic interpretation is to find a linear combination of these p + 1 vecotors. Two algebraic concepts pop up here first, linear **span** of a set of vectors, second column space of a matrix. So column space of a matrix X is linear span of all of it's columns $\\mathbf{x_i}$.\n",
+        "The algebraic interpretation is to find a linear combination of these p + 1 vecotors. Two algebraic concepts pop up here first, linear **span** of a set of vectors, second column space of a matrix. Basically, X can be viewed as set of its column vectors.  Subsequently, column space of X is linear span of all of its columns $\\mathbf{x_i}$.\n",
         "\n",
-        "To find $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\hat{y}$ is to find a linear combination of columns of X that equals to $\\hat{y}$\n",
-        "Lets revisit the questions we asked above.\n",
+        "To find $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\widehat{y}$ is to find a linear combination of columns of X that equals to $\\widehat{y}$.\n",
+        "Lets revisit the question we asked above.\n",
         "\n",
         "**Question 1**: When does this equation have answer?\n",
         "\n",
-        "**Answer**: The equation has answer if and only if $\\hat{y}$ resists on the vecotr space of linear span of $\\mathbf{x_i}$'s.\n",
+        "**Answer**: The equation has answer if and only if $\\widehat{y}$ resists on the vector space of linear span of $\\mathbf{x_i}$'s.\n",
         "\n",
-        "**Question 2**  When is it a unique answer? 🤷\n",
-        "\n",
-        "HERE!!! continue with second question and then move all X(XTX)-1 craziness to here, **NAME** my important eqs for easier reference 🌨\n",
+        "What if the equation doesn not have an answer? By the way this is why the linear regression equation has the $\\epsilon$ term in it meaning that there is no exact solution for matrix equation. Also this is the reason we denote **sample** regression coefficient by $\\widehat{\\beta}$ meaning that we don't have access to the exact $\\beta$.\n",
         "\n",
         "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7tbD1EalLaZW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
+        "Lets work on another matrix equation that resembles **line fitting** equation:\n",
+        "$$ \\textbf{X} {\\beta}  + \\epsilon= {y}$$\n",
+        "\n",
+        "The goal here is to come up with an  equation that always have an answer.  \n",
+        "\n",
+        " If y is not in column space of X, we can find closest $\\widehat{y}$ that is in the span of columns of $X$ and solve the equation for that:\n",
+        " $$ \\textbf{X} \\widehat{\\beta}  = \\widehat{y}$$\n",
+        "\n",
+        "How can we project $y$ to columns space of $\\mathbf{X}$?\n",
+        "1. Turns out it really depends. For example if $\\mathbf{X}$ is a square matrix, then every vector of right dimension is already on column space of $\\mathbf{X}$.\n",
+        "\n",
+        "2. If $\\mathbf{X}$ columns are orthonormal basis, $\\mathbf{X}\\mathbf{X}^T$ is desired projection.\n",
+        "3. In the most general case $ \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T$ is such a projection ( In fact a change of basis).\n",
+        "\n",
+        "\n",
+        "Instead of finding $\\beta$, we set out to find $\\widehat{\\beta}$ in\n",
+        "$$\\widehat{y} = \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T y =  \\mathbf{X} \\widehat{\\beta}$$ 🤯\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "HERE!!!! make a line for $\\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}X^T$ and name it.\n",
+        "While $\\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}X^T y =  X \\widehat{\\beta}$ might have multiple solution, one trivial solution is $\\hat{\\beta} = (X^TX)^{-1}X^T y$ by removing X from the right and left side\n",
+        "\n",
+        "HERE!!!(easier way to arrive at it?what if y is in column space of X? does it simplify? see with data)\n",
+        " HERE!!!\n",
+        "**sources**\n",
+        "1. https://en.wikipedia.org/wiki/Projection_(linear_algebra)#Formulas\n",
+        "2. https://www-users.cse.umn.edu/~rejto/4242/4242_2final_sol3.pdf\n",
+        "3. https://math.stackexchange.com/questions/1816364/the-svd-solution-to-linear-least-squares-linear-system-of-equations\n",
+        "\n",
+        "\n",
+        "HERE!!! put all X(XTX)-1 craziness to here, **NAME** my important eqs for easier reference 🌨\n",
+        "\n",
+        "\n",
+        "Now lets sample a set and try these matrices.\n",
         "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. I would suggest try to answer a few questions for yourself, such as\n",
         "1. what is the shape of X?\n",
         "2. what is the rank of X?"
       ],
       "metadata": {
-        "id": "7tbD1EalLaZW"
+        "id": "e-VLojeY2TMV"
       }
     }
   ],
