--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -712,31 +712,20 @@
         "\\beta_p \\\\\n",
         "\\end{bmatrix}\n",
         "= \\\\\n",
-        "\\beta_0 *\n",
         "\\begin{bmatrix}\n",
-        "1\\\\\n",
-        "1 \\\\\n",
-        "\\vdots\\\\\n",
-        "1\n",
+        "\\mathbf{x_0}  \\cdots  \\mathbf{x_p}\n",
+        "\\end{bmatrix}.\\begin{bmatrix}\n",
+        "\\beta_0 \\\\\n",
+        "\\vdots \\\\\n",
+        "\\beta_p \\\\\n",
         "\\end{bmatrix}\n",
-        "+ \\cdots + \\beta_j *\n",
-        "\\begin{bmatrix}\n",
-        "x_{1j} \\\\\n",
-        "x_{2j} \\\\\n",
-        "\\vdots \\\\\n",
-        "x_{nj}\n",
-        "\\end{bmatrix} + \\cdots + \\beta_p *\n",
-        "\\begin{bmatrix}\n",
-        "x_{1p} \\\\\n",
-        "x_{2p} \\\\\n",
-        "\\vdots \\\\\n",
-        "x_{np}\n",
-        "\\end{bmatrix} + \\epsilon =\\\\\n",
-        "\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i\n",
         "$$\n",
-        "\n",
-        "Not that $\\mathbf{x}_i$ denotes the i-th column of X.\n",
-        "We just ended up with a $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i $"
+        "Where $\\mathbf{x_i}$ is the i-th column of $\\mathbf{X}$. (Remember that the ith column of $\\mathbf{X}$ is $\\begin{bmatrix}\n",
+        "x_{1i} \\\\\n",
+        "x_{2i} \\\\\n",
+        "\\vdots \\\\\n",
+        "x_{ni}\n",
+        "\\end{bmatrix}$)"
       ],
       "metadata": {
         "id": "KWHMu8ZeHkst"
@@ -745,7 +734,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The algebraic interpretation is to find a linear combination of these p + 1 vecotors. Two algebraic concepts pop up here first, linear **span** of a set of vectors, second column space of a matrix. Basically, X can be viewed as set of its column vectors.  Subsequently, column space of X is linear span of all of its columns $\\mathbf{x_i}$.\n",
+        "We cab continue the exansion\n",
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "\\mathbf{x_0}  \\cdots  \\mathbf{x_p}\n",
+        "\\end{bmatrix}.\\begin{bmatrix}\n",
+        "\\beta_0 \\\\\n",
+        "\\vdots \\\\\n",
+        "\\beta_p \\\\\n",
+        "\\end{bmatrix} = \\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\widehat{y}\n",
+        "$$\n",
+        "\n",
+        "We just ended up with anoter equation  $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\widehat{y}$ (NAME=EXPANDED_MATRIX_EQ)"
+      ],
+      "metadata": {
+        "id": "za3Ycu5mTGP9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In the **expanded formula**, on the left hand side we have we have an unknown  combination of $\\mathbf{X}$ columns and on the right side we have $\\widehat{y}$. We would like to find the combinations of columns of $\\mathbf{X}$ that equals to $\\widehat{y}$.\n",
+        "\n",
+        "Two algebraic concepts pop up here: first, linear **span** of a set of vectors, secondly, **column space of a matrix**. Basically, X can be viewed as set of its column vectors.  Subsequently, column space of X is linear span of all of its columns $\\mathbf{x_i}$.\n",
         "\n",
         "To find $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\widehat{y}$ is to find a linear combination of columns of X that equals to $\\widehat{y}$.\n",
         "Lets revisit the question we asked above.\n",
@@ -800,7 +811,8 @@
         "3. https://math.stackexchange.com/questions/1816364/the-svd-solution-to-linear-least-squares-linear-system-of-equations\n",
         "\n",
         "\n",
-        "HERE!!! put all X(XTX)-1 craziness to here, **NAME** my important eqs for easier reference 🌨\n",
+        "HERE!!! put all X(XTX)-1 craziness to here, **NAME** my important eqs for easier reference 🌨 First tag them with **(NAME=EXPANDED_MATRIX_EQ)**. ask chat how\n",
+        "\n",
         "\n",
         "\n",
         "Now lets sample a set and try these matrices.\n",
