--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -765,7 +765,8 @@
         "\n",
         "**Answer**: The equation has answer if and only if $\\widehat{y}$ resists on the vector space of linear span of $\\mathbf{x_i}$'s.\n",
         "\n",
-        "What if the equation doesn not have an answer? By the way this is why the linear regression equation has the $\\epsilon$ term in it meaning that there is no exact solution for matrix equation. Also this is the reason we denote **sample** regression coefficient by $\\widehat{\\beta}$ meaning that we don't have access to the exact $\\beta$.\n",
+        "We assumend the equation have a solution. But what if the equation doesn? By the way this is why the linear regression equation has the $\\epsilon$ term in it meaning that there is no exact solution for matrix equation. Also this is the reason we denote **sample** regression coefficient by $\\widehat{\\beta}$ meaning that we don't have access to the exact $\\beta$.\n",
+        "\n",
         "\n",
         "\n",
         "\n"
@@ -790,11 +791,19 @@
         "1. Turns out it really depends. For example if $\\mathbf{X}$ is a square matrix, then every vector of right dimension is already on column space of $\\mathbf{X}$.\n",
         "\n",
         "2. If $\\mathbf{X}$ columns are orthonormal basis, $\\mathbf{X}\\mathbf{X}^T$ is desired projection.\n",
-        "3. In the most general case $ \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T$ is such a projection ( In fact a change of basis).\n",
+        "3. In the most general case $ \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T$ is such a projection ( In fact a change of basis). We call this a **Projection** matrix based on $\\mathbf{X}$ and denote it with $X^*$, from now on.\n",
+        "$$ X^* =  \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T\n",
+        "$$\n",
+        "\n",
+        "Althogh $X \\beta = y$ might not have an answer, $X \\widehat{\\beta} = X^* y $ would defientely have solution since  $X^* y$ lies in column space of $X$.\n",
+        "\n",
+        "It means of finding $\\beta$, we set out to find $\\widehat{\\beta}$ in\n",
+        "$$\\widehat{y} = X^* y =  \\mathbf{X} \\widehat{\\beta}$$ 🤯\n",
         "\n",
         "\n",
-        "Instead of finding $\\beta$, we set out to find $\\widehat{\\beta}$ in\n",
-        "$$\\widehat{y} = \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T y =  \\mathbf{X} \\widehat{\\beta}$$ 🤯\n",
+        "HERE!!!! read 2.1. Orthogonal and orthonormal bases. (137/ 286) for linalgdonewrong, before proceeding, maybe choose some excerise from it and work it out with data.\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
