--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -801,14 +801,21 @@
         "$$\\widehat{y} = X^* y =  \\mathbf{X} \\widehat{\\beta}$$ 🤯\n",
         "\n",
         "\n",
-        "HERE!!!! read 2.1. Orthogonal and orthonormal bases. (137/ 286) for linalgdonewrong, before proceeding, maybe choose some excerise from it and work it out with data.\n",
+        "HERE!!!! read 5. Adjoint of a linear transformation (152/286). Fundamental subspaces revisited. for linalgdonewrong, before proceeding, maybe choose some excerise from it and work it out with data.\n",
+        "2.1. Orthogonal and orthonormal bases. (137/ 286)\n",
+        "4. Least square solution. Formula for the orthogonal projection\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "e-VLojeY2TMV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "HERE!!!! make a line for $\\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}X^T$ and name it.\n",
         "While $\\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}X^T y =  X \\widehat{\\beta}$ might have multiple solution, one trivial solution is $\\hat{\\beta} = (X^TX)^{-1}X^T y$ by removing X from the right and left side\n",
         "\n",
@@ -830,7 +837,7 @@
         "2. what is the rank of X?"
       ],
       "metadata": {
-        "id": "e-VLojeY2TMV"
+        "id": "DhZY9ZCrjvDD"
       }
     }
   ],
